Feat:Add the Spotless plugin to enable one click modification of the overall code style